--- a/panel.html
+++ b/panel.html
@@ -167,7 +167,7 @@
         let currentOrderElement = null;
 
         function loadOrders() {
-            if (SCRIPT_URL === "URL_DE_TU_SCRIPT_AQUI" || !SCRIPT_URL) {
+            if (SCRIPT_URL === "https://script.google.com/macros/s/AKfycbwQdJAIlUgMhvDqGmyo_IUDfXFf6TtwlBrlfUyoc5dOoohHqw1R2oxQhuALfNHjGj-V/exec" || !SCRIPT_URL) {
                 loader.textContent = "ERROR: No se ha configurado la URL del script de Google en el código.";
                 return;
             }
