--- a/panel.html
+++ b/panel.html
@@ -79,25 +79,35 @@
         
         /* --- REGLAS DE IMPRESIÓN DEFINITIVAS --- */
         @media print {
-            body > *:not(#details-overlay) {
-                display: none !important;
+            body * {
+                visibility: hidden;
             }
-            #details-overlay, #details-content {
-                display: block !important;
-                position: static !important;
-                background: white !important;
-                box-shadow: none !important;
-                border: none !important;
-                padding: 0 !important;
-                margin: 0 !important;
-                border-radius: 0 !important;
-                overflow: visible !important;
+            #details-overlay, #details-overlay * {
+                visibility: visible;
+            }
+            #details-overlay {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                overflow: visible;
+                background: white;
+                padding: 0;
+                margin: 0;
+            }
+            #details-content {
+                box-shadow: none;
+                border: none;
+                padding: 1.5cm;
+                box-sizing: border-box;
+                width: 100%;
             }
             .details-section {
-                page-break-inside: avoid !important;
+                page-break-inside: avoid;
             }
             .details-controls, .gemini-section, .payment-proof-section {
-                display: none !important;
+                display: none;
             }
         }
     </style>
@@ -485,6 +495,8 @@
     </script>
 </body>
 </html>
+
+
 
 
 
