--- a/panel.html
+++ b/panel.html
@@ -44,7 +44,6 @@
         .details-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: none; justify-content: center; align-items: flex-start; z-index: 1000; overflow-y: auto; padding: 40px 20px; box-sizing: border-box; }
         .details-content { background: white; padding: 40px; width: 100%; max-width: 800px; box-shadow: 0 0 20px rgba(0,0,0,0.2); border-radius: 8px; }
         .details-header { display: flex; justify-content: space-between; border-bottom: 2px solid #ccc; padding-bottom: 20px; align-items: flex-start; }
-        .albaran-logo { max-width: 150px; max-height: 70px; object-fit: cover; border-radius: 4px; }
         .details-header .sender-info { text-align: right; }
         .details-section { margin-top: 25px; }
         .details-section .info-block { background: #f9f9f9; padding: 15px; border-radius: 5px; margin-top: 10px; }
@@ -87,7 +86,7 @@
             body > *:not(#printable-albaran) {
                 display: none !important;
             }
-            #printable-albaran {
+            #printable-albaran, #printable-albaran * {
                 display: block !important;
             }
         }
@@ -542,7 +541,6 @@
     </script>
 </body>
 </html>
-
 
 
 
