--- a/prueba.html
+++ b/prueba.html
@@ -21,7 +21,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="estilos2.css">
 
   <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
 </head>
@@ -110,4 +110,5 @@
     });
   </script>
 </body>
+
 </html>
