--- a/prueba.html
+++ b/prueba.html
@@ -294,7 +294,7 @@
     <div class="header-pattern"></div>
     <h1>Bienvenidos a mi mundo literario</h1>
   </header>
-  <img src="imagenes/separador.png" alt="Separador decorativo" class="separator">
+  <img src="imagenes/tulipan.png" alt="Separador decorativo" class="separator">
   <section>
     <h2>Mis Libros</h2>
     <div class="book-container">
@@ -406,3 +406,4 @@ Llegué a España hace unos cuantos años, mi obligación de aprender castellano
   </script>
 </body>
 </html>
+
