--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de romances eroticos. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
   <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros">
   <meta name="author" content="Ana Carolina">
-  <!-- Open Graph y Twitter Card -->
   <meta property="og:title" content="Página de Ana Carolina - Autora de romances eroticos">
   <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
   <meta property="og:image" content="https://escritoraanacarolina.com/imagenes/portada2.jpg">
@@ -17,13 +16,316 @@
   <meta name="twitter:title" content="Página de Ana Carolina - Autora de romances eroticos">
   <meta name="twitter:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
   <meta name="twitter:image" content="https://escritoraanacarolina.com/mislibros/imagenes/portada1.jpg">
-  <!-- Enlace a FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <!-- Enlace al archivo CSS externo -->
-  <link rel="stylesheet" href="estilos.css">
-  <!-- Favicon -->
   <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
-</head>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+
+  <style>
+    /* Estilos generales inspirados en la portada "Yo antes y después de ti" */
+
+    /* Definición de la paleta de colores de la portada con más énfasis */
+    :root {
+        --color-cielo: #87CEEB; /* Azul vibrante del cielo */
+        --color-titulo-rosa: #FF1493; /* Rosa intenso del título, ahora más presente */
+        --color-texto-oscuro: #2D3945; /* Gris/Azul oscuro más profundo para el texto principal */
+        --color-tulipan-coral: #FF7F50; /* Naranja/Coral más fuerte de los tulipanes */
+        --color-tulipan-morado: #9370DB; /* Morado medio de los tulipanes */
+        --color-cesped-verde: #8FBC8F; /* Verde suave del césped */
+        --color-fondo-suave: #F0F8FF; /* Un blanco azulado muy claro para fondos */
+        --color-blanco-puro: #FFFFFF;
+    }
+
+    body {
+        font-family: 'Open Sans', sans-serif; /* Nueva fuente para el cuerpo */
+        background-color: var(--color-fondo-suave);
+        color: var(--color-texto-oscuro);
+        margin: 0;
+        padding: 0;
+        font-size: 16px;
+    }
+
+    header {
+        text-align: center;
+        padding: 60px 20px; /* Más padding para un look más abierto */
+        background: linear-gradient(135deg, var(--color-cielo), #B0E0E6); /* Gradiente suave del cielo */
+        position: relative;
+        overflow: hidden;
+        color: var(--color-blanco-puro);
+    }
+
+    h1 {
+        font-family: 'Montserrat', sans-serif; /* Nueva fuente para títulos */
+        font-size: 3.5rem; /* Más grande para el impacto */
+        color: var(--color-blanco-puro); /* Blanco sobre el degradado de cielo */
+        text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
+        margin: 0;
+        position: relative;
+        z-index: 2;
+    }
+
+    h2 {
+        font-family: 'Montserrat', sans-serif; /* Nueva fuente para subtítulos */
+        font-size: 2.5rem; /* Más grande */
+        color: var(--color-tulipan-morado); /* Morado vibrante */
+        text-align: center;
+        margin-top: 40px; /* Más espacio */
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    }
+
+    h3 {
+        font-family: 'Montserrat', sans-serif; /* Nueva fuente para títulos de libros */
+        font-size: 1.5rem; /* Más grande */
+        color: var(--color-texto-oscuro);
+        margin: 15px 0 10px; /* Ajuste de margen */
+        text-align: center;
+    }
+
+    .separator {
+        width: 100%;
+        height: auto;
+        display: block;
+        opacity: 0.8; /* Ligeramente transparente para integrarse mejor */
+    }
+
+    /* Estilos de los libros */
+    .book-container {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        flex-wrap: wrap;
+        padding: 30px 20px; /* Más padding */
+    }
+
+    .book {
+        background-color: var(--color-blanco-puro);
+        border-radius: 20px; /* Esquinas más redondeadas */
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15); /* Sombra más suave y extendida */
+        text-align: center;
+        max-width: 350px; /* Ligeramente más anchos */
+        padding: 25px; /* Más padding interno */
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .book:hover {
+        transform: translateY(-12px); /* Más elevación al pasar el ratón */
+        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+    }
+
+    .book-cover {
+        width: 100%;
+        max-width: 220px; /* Portadas ligeramente más grandes */
+        border-radius: 12px; /* Esquinas de imagen más redondeadas */
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25); /* Sombra más fuerte para la portada */
+        margin-bottom: 20px; /* Más espacio debajo */
+    }
+
+    .book-description {
+        margin: 20px 0; /* Más espacio alrededor */
+        color: var(--color-texto-oscuro); /* Texto más oscuro y legible */
+        text-align: justify;
+        font-size: 1rem; /* Tamaño de fuente ligeramente mayor */
+        line-height: 1.7; /* Mayor interlineado para legibilidad */
+    }
+
+    /* Estilos de los botones */
+    .buy-button, .instagram-button {
+        display: inline-block;
+        color: var(--color-blanco-puro);
+        padding: 14px 30px; /* Más grandes */
+        text-decoration: none;
+        border-radius: 35px; /* Más redondeados */
+        font-size: 1.1rem; /* Texto más grande */
+        font-weight: 700; /* Más negrita */
+        transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+        border: none;
+        cursor: pointer;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.2); /* Sombra para los botones */
+    }
+
+    .buy-button {
+        background-color: var(--color-tulipan-coral); /* Coral más fuerte */
+    }
+
+    .buy-button:hover {
+        background-color: #FF6347; /* Un coral aún más vivo */
+        transform: scale(1.08);
+        box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+    }
+
+    .instagram-button {
+        background-color: var(--color-titulo-rosa); /* Rosa vibrante */
+    }
+
+    .instagram-button:hover {
+        background-color: #E6007A; /* Rosa más oscuro */
+        transform: scale(1.08);
+        box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+    }
+
+    .instagram-button i {
+        margin-right: 10px;
+    }
+
+    /* Sección Bookstagrammer */
+    #Bookstagrammer {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000;
+        text-align: center;
+    }
+
+    #Bookstagrammer h2 {
+        display: none; /* Ocultamos el título para un look más limpio */
+    }
+
+    #toggleBookstagrammers {
+        width: 55px; /* Más grande */
+        height: 55px;
+        font-size: 1.8rem; /* Icono más grande */
+        border-radius: 50%;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--color-tulipan-morado); /* Color distintivo */
+        color: var(--color-blanco-puro);
+        box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+        transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+    
+    #toggleBookstagrammers:hover {
+        background-color: #7B68EE; /* Morado un poco más oscuro */
+        transform: scale(1.1);
+    }
+
+    #toggleBookstagrammers i {
+        margin: 0;
+    }
+
+    .Bookstagrammer-container {
+        background-color: rgba(255, 255, 255, 0.98); /* Fondo casi opaco */
+        padding: 20px;
+        border-radius: 15px; /* Más redondeado */
+        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25); /* Sombra más definida */
+        margin-bottom: 15px; /* Más espacio */
+        display: flex;
+        flex-direction: column;
+        gap: 12px; /* Más espacio entre elementos */
+    }
+
+    .booksgramer {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+    }
+
+    .booksgramer img {
+        width: 55px; /* Más grande */
+        height: 55px;
+        border-radius: 50%;
+        border: 3px solid var(--color-tulipan-coral); /* Borde con color de acento */
+        box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+    }
+
+    .booksgramer .instagram-button {
+        padding: 8px 15px; /* Ajuste de padding */
+        font-size: 0.95rem;
+        box-shadow: none; /* Quitamos sombra extra */
+    }
+    .booksgramer .instagram-button:hover {
+        transform: scale(1.05); /* Escala más sutil */
+    }
+
+
+    /* Estilos para el botón y la biografía */
+    .bio-button {
+        position: fixed;
+        bottom: 20px;
+        left: 20px;
+        border: 4px solid var(--color-titulo-rosa); /* Borde con rosa de acento */
+        background: transparent;
+        cursor: pointer;
+        z-index: 1000;
+        width: 75px; /* Más grande */
+        height: 75px;
+        border-radius: 50%;
+        overflow: hidden;
+        padding: 0;
+        box-shadow: 0 5px 12px rgba(0,0,0,0.3); /* Sombra más fuerte */
+        transition: transform 0.3s ease;
+    }
+
+    .bio-button:hover {
+        transform: scale(1.15); /* Más elevación */
+    }
+
+    .bio-button img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .bio-content {
+        position: fixed;
+        bottom: 100px;
+        left: 20px;
+        background: var(--color-blanco-puro);
+        padding: 30px; /* Más padding */
+        width: 350px; /* Más ancho */
+        box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.3); /* Sombra más potente */
+        z-index: 999;
+        border-radius: 20px; /* Más redondeado */
+        opacity: 0;
+        transform: translateY(30px); /* Más desplazamiento inicial */
+        transition: opacity 0.5s ease, transform 0.5s ease; /* Transición más suave */
+        visibility: hidden;
+    }
+
+    .bio-content.show {
+        opacity: 1;
+        transform: translateY(0);
+        visibility: visible;
+    }
+
+    .bio-content img.bio-photo {
+        width: 130px; /* Más grande */
+        height: 130px;
+        border-radius: 50%;
+        display: block;
+        margin: 0 auto 20px; /* Más espacio debajo */
+        border: 5px solid var(--color-tulipan-coral); /* Borde con color de acento */
+        box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+    }
+
+    .bio-content h2 {
+        font-size: 2rem; /* Tamaño de título dentro de la bio */
+        margin-top: 0;
+        color: var(--color-tulipan-morado);
+    }
+
+    .close-button {
+        background: var(--color-tulipan-coral);
+        color: var(--color-blanco-puro);
+        border: none;
+        padding: 10px 20px; /* Más grande */
+        cursor: pointer;
+        margin-top: 20px; /* Más espacio */
+        border-radius: 25px; /* Más redondeado */
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        font-weight: 700; /* Más negrita */
+        box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+
+    .close-button:hover {
+        background: #FF6347;
+        transform: scale(1.05);
+    }
+  </style>
+  </head>
 <body>
   <header>
     <div class="header-pattern"></div>
@@ -69,37 +371,30 @@ Un error del pasado que lo cambia todo.
     </div>
   </section>
   
-  <!-- Sección Bookstagrammer -->
   <section id="Bookstagrammer">
     <h2>Bookstagrammer</h2>
-    <!-- Botón para mostrar/ocultar la lista -->
     <button id="toggleBookstagrammers" class="instagram-button">
       <i class="fab fa-instagram"></i>
     </button>
-    <!-- Lista de colaboradores, inicialmente oculta -->
     <div id="bookstagrammerList" class="Bookstagrammer-container" style="display: none;">
-      <!-- Colaborador 1 -->
       <div class="booksgramer">
         <img src="imagenes/enerojs.jpg" alt="Foto de perfil de Booksgramer 1">
         <a href="https://www.instagram.com/enero.gs/" target="_blank" class="instagram-button">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-      <!-- Colaborador 2 -->
       <div class="booksgramer">
         <img src="imagenes/panditalectora.jpg" alt="Foto de perfil de Booksgramer 2">
         <a href="https://www.instagram.com/pandita.lectora" target="_blank" class="instagram-button">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-      <!-- Colaborador 3 -->
       <div class="booksgramer">
         <img src="imagenes/pame.jpg" alt="Foto de perfil de Booksgramer 3">
         <a href="https://www.instagram.com/fpamelagarcia" target="_blank" class="instagram-button">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-      <!-- Colaborador 4 -->
       <div class="booksgramer">
         <img src="imagenes/isacat7.jpg" alt="Foto de perfil de Booksgramer 4">
         <a href="https://www.instagram.com/isacat7" target="_blank" class="instagram-button">
@@ -109,12 +404,10 @@ Un error del pasado que lo cambia todo.
     </div>
   </section>
   
-  <!-- Botón circular con la foto de la autora en la esquina inferior izquierda -->
   <button id="bioButton" class="bio-button">
     <img src="imagenes/biografia.jpg" alt="Foto de la autora">
   </button>
   
-  <!-- Sección de biografía (desplegable con animación) -->
   <div id="bioContent" class="bio-content">
     <img src="imagenes/ana-carolina.jpg" alt="Foto de la autora" class="bio-photo">
     <h2>Biografía</h2>
@@ -150,6 +443,7 @@ Llegué a España hace unos cuantos años, mi obligación de aprender castellano
   </script>
 </body>
 </html>
+
 
 
 
