--- a/index.html
+++ b/index.html
@@ -347,6 +347,17 @@ Un error del pasado que lo cambia todo.
         </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScsFqoulsObZqjD0plvEA-wc_W26ZgPQnn_3Py0MqUXMHXwVA/viewform?usp=dialog" target="_blank" class="buy-button">PREVENTA</a>
       </div>
+      <h3>LA CHICA DEL PRIMER ASALTO</h3>
+        <img src="imagenes/portada4.jpg" alt="Portada del libro 'YO ANTES Y DESPUES DE TI'" class="book-cover">
+        <p class="book-description">
+         A sus veintiún años, Clara está a punto de convertirse en campeona de España en la categoría superwélter. Entrena sin descanso, su mayor sueño… representar España en las Olimpiadas de Francia. A su lado está Rubén, su hermano mayor y exboxeador, que dejó el ring por razones que aún no es capaz de superar. Y decide dedicarse por completo a la pequeña.
+
+Enric, un Cartetí de 36 años, neurólogo, no ha tenido ninguna relación sentimental, para no enfrentarse a las heridas que dejó una relación rota, y que continúan atormentándole.
+Lo último que espera es que una joven boxeadora irrumpa en su vida en lo que pensó que solo sería una noche.
+Sueños, pasado que pesan, encuentros que pueden cambiarlo todo…
+        </p>
+        <a href="https://www.amazon.es/chica-del-primer-asalto-ebook/dp/B0FC2PYJBW/ref=sr_1_1?crid=26MNP277LNT0&dib=eyJ2IjoiMSJ9.lwUWa9OKoBxNZ5KV7itF1Kp6zL_TsOF9e4fS_xPs3lbGjHj071QN20LucGBJIEps.1OudNgbEscmLYHVrLTZ80lgFsj6pz3PHmwtUaYeCHZc&dib_tag=se&keywords=la+chica+del+primer+asalto&qid=1757241085&sprefix=la+chica+del%2Caps%2C116&sr=8-1" target="_blank" class="buy-button">COMPRAR AHORA</a>
+      </div>
       <div class="book">
         <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
         <img src="imagenes/portada1.jpg" alt="Portada del libro '¿Y si no, nos hubiéramos conocido por casualidad?'" class="book-cover">
@@ -438,6 +449,7 @@ Llegué a España hace unos cuantos años, mi obligación de aprender castellano
   </script>
 </body>
 </html>
+
 
 
 
