--- a/reserva.html
+++ b/reserva.html
@@ -56,7 +56,6 @@
                                 <option value="">Selecciona una opción...</option>
                                 <option value="Correos">Correos (Envío a domicilio)</option>
                                 <option value="Inpost">Inpost (Punto de recogida)</option>
-                                <option value="Vinted">Vinted (Punto de recogida)</option>
                             </select>
                         </div>
                     </div>
@@ -73,9 +72,8 @@
                         </div>
 
                         <div class="mb-4">
-                            <label for="justificante_pago" class="form-label block mb-2">Enlace al justificante de pago *</label>
-                            <input type="url" id="justificante_pago" name="justificante_pago" required class="form-input w-full p-2 border rounded-md" placeholder="Pega aquí el enlace (Google Drive, Dropbox...)">
-                            <p class="text-xs text-gray-500 mt-1">Sube tu justificante a un servicio en la nube y pega el enlace aquí.</p>
+                            <label for="justificante_pago_file" class="form-label block mb-2">Adjuntar justificante de pago *</label>
+                            <input type="file" id="justificante_pago_file" name="justificante_pago_file" required class="form-input w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-50 file:text-indigo-700 hover:file:bg-indigo-100" accept="image/png, image/jpeg, image/gif, application/pdf">
                         </div>
                     </div>
                 </div>
@@ -111,14 +109,6 @@
                     </div>
                 </div>
 
-                <div id="punto-vinted" class="mt-6 border-t pt-6 hidden">
-                    <h3 class="text-xl font-bold text-gray-700 mb-4">Punto de Recogida (Vinted)</h3>
-                     <div>
-                        <label for="vinted_point" class="form-label block mb-2">Nombre de usuario o Punto Vinted *</label>
-                        <input type="text" id="vinted_point" name="vinted_point" class="form-input w-full p-2 border rounded-md">
-                    </div>
-                </div>
-
                 <div class="mt-8 text-center">
                     <button type="submit" id="submit-button" class="submit-btn text-white font-bold py-3 px-8 rounded-lg shadow-md hover:shadow-lg transition-all duration-200">
                         Confirmar Reserva
@@ -146,30 +136,31 @@
         const firmaContainer = document.getElementById('firma-container');
         const metodoEnvio = document.getElementById('metodo_envio');
 
-        // Mostrar/ocultar campo de nombre para la firma
         firmadoRadios.forEach(radio => {
             radio.addEventListener('change', (e) => {
                 firmaContainer.classList.toggle('hidden', e.target.value !== 'Sí');
             });
         });
 
-        // Mostrar/ocultar campos de dirección según el método de envío
         metodoEnvio.addEventListener('change', () => {
             const selected = metodoEnvio.value.toLowerCase();
             document.getElementById('direccion-correos').classList.toggle('hidden', !selected.includes('correos'));
             document.getElementById('punto-inpost').classList.toggle('hidden', !selected.includes('inpost'));
-            document.getElementById('punto-vinted').classList.toggle('hidden', !selected.includes('vinted'));
 
-            // Hacer campos requeridos dinámicamente
             document.getElementById('direccion').required = selected.includes('correos');
             document.getElementById('poblacion').required = selected.includes('correos');
             document.getElementById('provincia').required = selected.includes('correos');
             document.getElementById('cp').required = selected.includes('correos');
             document.getElementById('inpost_point').required = selected.includes('inpost');
-            document.getElementById('vinted_point').required = selected.includes('vinted');
         });
 
-        // Envío del formulario
+        const toBase64 = file => new Promise((resolve, reject) => {
+            const reader = new FileReader();
+            reader.readAsDataURL(file);
+            reader.onload = () => resolve(reader.result);
+            reader.onerror = error => reject(error);
+        });
+
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             const submitButton = document.getElementById('submit-button');
@@ -188,13 +179,31 @@
             modalTitle.textContent = 'Procesando...';
             modalMessage.textContent = 'Estamos guardando tu reserva. Por favor, espera.';
 
+            const fileInput = document.getElementById('justificante_pago_file');
+            let paymentProofData = null;
+
+            if (fileInput.files.length > 0) {
+                const file = fileInput.files[0];
+                const base64String = await toBase64(file);
+                paymentProofData = {
+                    fileName: file.name,
+                    mimeType: file.type,
+                    base64Data: base64String.split(',')[1] // Remove the data URI prefix
+                };
+            }
+
             const formData = new FormData(form);
             const data = {};
-            formData.forEach((value, key) => data[key] = value);
+            formData.forEach((value, key) => {
+                if (key !== 'justificante_pago_file') {
+                    data[key] = value;
+                }
+            });
 
             const payload = {
                 action: 'submitOrder',
-                orderData: data
+                orderData: data,
+                paymentProof: paymentProofData
             };
 
             try {
@@ -211,10 +220,8 @@
                     modalTitle.textContent = '¡Reserva Confirmada!';
                     modalMessage.textContent = 'Gracias por tu pedido. He recibido tus datos correctamente.';
                     form.reset();
-                    // Ocultar todos los condicionales
                     document.getElementById('direccion-correos').classList.add('hidden');
                     document.getElementById('punto-inpost').classList.add('hidden');
-                    document.getElementById('punto-vinted').classList.add('hidden');
                     firmaContainer.classList.add('hidden');
                 } else {
                     throw new Error(result.message || 'Error desconocido');
@@ -234,3 +241,5 @@
     </script>
 </body>
 </html>
+
+
