--- a/reserva.html
+++ b/reserva.html
@@ -6,26 +6,87 @@
     <title>Reserva - YO ANTES Y DESPUÉS DE TI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { font-family: 'Inter', sans-serif; }
-        .form-label { font-weight: 600; color: #374151; }
-        .form-input { border-color: #D1D5DB; transition: border-color 0.2s, box-shadow 0.2s; }
-        .form-input:focus { border-color: #4F46E5; box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.25); outline: none; }
-        .submit-btn { background-color: #4F46E5; }
-        .submit-btn:hover { background-color: #4338CA; }
-        .loader { border-top-color: #4F46E5; }
+        :root {
+            --color-cielo: #87CEEB;
+            --color-titulo-rosa: #FF1493;
+            --color-texto-oscuro: #2D3945;
+            --color-tulipan-coral: #FF7F50;
+            --color-tulipan-morado: #9370DB;
+            --color-cesped-verde: #8FBC8F;
+            --color-fondo-suave: #F0F8FF;
+            --color-blanco-puro: #FFFFFF;
+        }
+
+        body { 
+            font-family: 'Inter', sans-serif;
+            background-color: var(--color-fondo-suave);
+        }
+        
+        .header-title { color: var(--color-titulo-rosa); }
+        .header-subtitle, .form-label, h3 { color: var(--color-texto-oscuro); }
+        .form-input { 
+            border-color: #D1D5DB; 
+            transition: border-color 0.2s, box-shadow 0.2s; 
+        }
+        .form-input:focus { 
+            border-color: var(--color-tulipan-coral); 
+            box-shadow: 0 0 0 2px color-mix(in srgb, var(--color-tulipan-coral) 25%, transparent); 
+            outline: none; 
+        }
+        .submit-btn { 
+            background-color: var(--color-titulo-rosa);
+            transition: background-color 0.2s;
+        }
+        .submit-btn:hover { 
+            background-color: color-mix(in srgb, var(--color-titulo-rosa) 90%, black);
+        }
+        .loader { border-top-color: var(--color-tulipan-coral); }
         .hidden { display: none; }
+
+        /* Estilos para el cuadro de instrucciones */
+        .info-box {
+            background-color: color-mix(in srgb, var(--color-cielo) 20%, transparent);
+            border-left: 4px solid var(--color-cielo);
+            color: var(--color-texto-oscuro);
+        }
+        .info-box svg {
+            color: var(--color-cielo);
+        }
+
+        /* Estilo para el botón de adjuntar archivo */
+        .file-btn {
+            background-color: color-mix(in srgb, var(--color-tulipan-morado) 15%, transparent);
+            color: var(--color-tulipan-morado);
+            cursor: pointer;
+        }
+        .file-btn:hover {
+            background-color: color-mix(in srgb, var(--color-tulipan-morado) 25%, transparent);
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-50">
+<body>
 
     <div class="container mx-auto p-4 md:p-8 max-w-3xl">
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-800">Reserva Exclusiva</h1>
-            <p class="text-lg text-gray-600 mt-2">"YO ANTES Y DESPUÉS DE TI"</p>
+            <h1 class="text-4xl font-bold header-title">Reserva Exclusiva</h1>
+            <p class="text-lg header-subtitle mt-2">"YO ANTES Y DESPUÉS DE TI"</p>
         </header>
+
+        <!-- --- INSTRUCCIONES DE PAGO CON NUEVO ESTILO --- -->
+        <div class="info-box p-4 rounded-md mb-8" role="alert">
+            <div class="flex">
+                <div class="py-1">
+                    <svg class="fill-current h-6 w-6 mr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm-1-11V5h2v4h-2zm0 6v-2h2v2h-2z"/></svg>
+                </div>
+                <div>
+                    <p class="font-bold">Instrucciones de Pago</p>
+                    <p class="text-sm">Para confirmar tu reserva, realiza un Bizum de <strong>24 €</strong> al número <strong>698 982 882</strong>. Después, adjunta el justificante de pago en el formulario.</p>
+                </div>
+            </div>
+        </div>
 
         <div class="bg-white p-6 md:p-10 rounded-lg shadow-lg">
             <form id="reserva-form">
@@ -40,8 +101,8 @@
                         <div class="mb-4">
                             <label class="form-label block mb-2">¿Quieres el libro firmado? *</label>
                             <div class="flex items-center space-x-4">
-                                <label><input type="radio" name="firmado" value="Sí" required class="mr-1"> Sí</label>
-                                <label><input type="radio" name="firmado" value="No" class="mr-1"> No</label>
+                                <label class="flex items-center"><input type="radio" name="firmado" value="Sí" required class="mr-2"> Sí</label>
+                                <label class="flex items-center"><input type="radio" name="firmado" value="No" class="mr-2"> No</label>
                             </div>
                         </div>
 
@@ -73,14 +134,14 @@
 
                         <div class="mb-4">
                             <label for="justificante_pago_file" class="form-label block mb-2">Adjuntar justificante de pago *</label>
-                            <input type="file" id="justificante_pago_file" name="justificante_pago_file" required class="form-input w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-50 file:text-indigo-700 hover:file:bg-indigo-100" accept="image/png, image/jpeg, image/gif, application/pdf">
+                            <input type="file" id="justificante_pago_file" name="justificante_pago_file" required class="form-input w-full text-sm file-btn file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold" accept="image/png, image/jpeg, image/gif, application/pdf">
                         </div>
                     </div>
                 </div>
 
                 <!-- Campos de Dirección Condicionales -->
                 <div id="direccion-correos" class="mt-6 border-t pt-6 hidden">
-                    <h3 class="text-xl font-bold text-gray-700 mb-4">Dirección de Envío (Correos)</h3>
+                    <h3 class="text-xl font-bold mb-4">Dirección de Envío (Correos)</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="md:col-span-2">
                             <label for="direccion" class="form-label block mb-2">Dirección Completa *</label>
@@ -102,7 +163,7 @@
                 </div>
 
                 <div id="punto-inpost" class="mt-6 border-t pt-6 hidden">
-                    <h3 class="text-xl font-bold text-gray-700 mb-4">Punto de Recogida (Inpost)</h3>
+                    <h3 class="text-xl font-bold mb-4">Punto de Recogida (Inpost)</h3>
                      <div>
                         <label for="inpost_point" class="form-label block mb-2">Dirección del Punto Inpost *</label>
                         <input type="text" id="inpost_point" name="inpost_point" class="form-input w-full p-2 border rounded-md">
@@ -122,14 +183,14 @@
     <div id="modal" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center p-4 hidden z-50">
         <div class="bg-white rounded-lg shadow-2xl p-8 max-w-sm w-full text-center">
              <div id="modal-loader" class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-12 w-12 mx-auto mb-4"></div>
-            <h3 id="modal-title" class="text-2xl font-bold text-gray-800 mb-2">Procesando...</h3>
+            <h3 id="modal-title" class="text-2xl font-bold header-subtitle mb-2">Procesando...</h3>
             <p id="modal-message" class="text-gray-600 mb-6">Estamos guardando tu reserva. Por favor, espera.</p>
             <button id="modal-close-btn" class="submit-btn text-white font-bold py-2 px-6 rounded-md hidden">Cerrar</button>
         </div>
     </div>
 
     <script>
-        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz5h4YbUvydEVw3uMWq--C4A631mJduMMLy0Yy3KSUw1ilZ1XQHuenkfHC50xaKpapQ/exec";
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzKqIYrCyxTl1nal66XOXgPdwn30C4lFQ0TOzFLPyosA0-JWW3AnyUAnQsGlj7ET_W4/exec";
 
         const form = document.getElementById('reserva-form');
         const firmadoRadios = document.querySelectorAll('input[name="firmado"]');
@@ -241,5 +302,7 @@
     </script>
 </body>
 </html>
+
+
 
 
