--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ Un corazón roto.
 Un ángel sin alas. 
 Un error del pasado que lo cambia todo.
         </p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLScsFqoulsObZqjD0plvEA-wc_W26ZgPQnn_3Py0MqUXMHXwVA/viewform?usp=dialog" target="_blank" class="buy-button">PREVENTA</a>
+        <a href="https://www.escritoraanacarolina.com/reserva.html">PREVENTA</a>
       </div>
       <div class="book">
         <h3>LA CHICA DEL PRIMER ASALTO</h3>
@@ -449,3 +449,4 @@ Llegué a España hace unos cuantos años, mi obligación de aprender castellano
   </script>
 </body>
 </html>
+
