--- a/reserva.html
+++ b/reserva.html
@@ -71,7 +71,7 @@
 
     <div class="container mx-auto p-4 md:p-8 max-w-3xl">
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold header-title">Reserva Exclusiva</h1>
+            <h1 class="text-4xl font-bold header-title">Preventa</h1>
             <p class="text-lg header-subtitle mt-2">"YO ANTES Y DESPUÉS DE TI"</p>
         </header>
 
