--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ Un corazón roto.
 Un ángel sin alas. 
 Un error del pasado que lo cambia todo.
         </p>
-        <a href="https://www.escritoraanacarolina.com/reserva.html">PREVENTA</a>
+        <a href="https://www.escritoraanacarolina.com/reserva.html" class="buy-button">PREVENTA</a>
       </div>
       <div class="book">
         <h3>LA CHICA DEL PRIMER ASALTO</h3>
@@ -449,4 +449,5 @@ Llegué a España hace unos cuantos años, mi obligación de aprender castellano
   </script>
 </body>
 </html>
+
 
